body alignment - fixed

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
 
     font-family: "Courier New",sans-serif ;
 background-color: #2d2d2d;
+    margin-left:400px;
     max-width: 1000px;
 }
 .navigacija{
